# template_for_AI_pytorch_lightning

./: README.md  pyproject.toml
wtfml/cross_validation/: fold_generator.py
wtfml/data_loaders/image/: __init__.py  classification.py
wtfml/data_loaders/nlp/: classification.py
wtfml/engine/: engine.py
wtfml/engine/image/classification/: model.py
wtfml/engine/nlp/: model.py
wtfml/engine/pl_engine/: classification.py
wtfml/pre_treatment/: scraiping_tweet_data.py
wtfml/utils/: utils.py
