[tool.poetry]
name = "template_for_ai_pytorch_lightning"
version = "0.1.0"
description = "This is the template for AI-Machine learning task for JX_press member"
authors = ["Yongtae Hwang"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.4"
torch = "1.8.1"
pytorch-lightning = "^1.3.6"
scikit-learn = "^0.24.2"
albumentations = "^1.0.0"
numpy = "^1.20.3"
black = "^21.6b0"
torchmetrics = "^0.3.2"
transformers = "^4.7.0"
efficientnet-pytorch = "^0.7.1"
torchvision = "0.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
